end (before last changes) of website

--- a/webProgrammingTest/Pages/Shared/_mainLayout.cshtml
+++ b/webProgrammingTest/Pages/Shared/_mainLayout.cshtml
@@ -8,10 +8,10 @@
 <body>
 
     <div class="navigation">
-        <a href="main"> <img src="../Images/poison.png" style="height: 50px"/> </a>
+        <a href="mainPage"> <img src="../Images/poison.png" style="height: 50px"/> </a>
         <a>Flour</a>
-        <a href="smain">Salt</a>
-        <a href="smain">Sugar</a>
+        <a href="Salt">Salt</a>
+        <a href="Sugar">Sugar</a>
         <a>Quiz?</a>
     </div>
 
