--- a/webProgrammingTest/Pages/mainPage.cshtml
+++ b/webProgrammingTest/Pages/mainPage.cshtml
@@ -16,7 +16,22 @@
 	</p>
 </div>
 
-<div id="flour">
-	<img src="../Images/Flour.jpg" style="width: 35%" />
+<div class="left">
+	<img src="../Images/Flour.jpg" style="width: 23%; height: 250px" />
 	<a size="1.5em">White Flour</a>
 </div>
+
+<div id="salt">
+	<img src="../Images/Salt.jpg" style="width: 23%; height: 250px" />
+	<a size="1.5em">Salt</a>
+</div>
+
+<div class="left">
+	<img src="../Images/sugar.jpg" style="width: 23%; height: 250px" />
+	<a size="1.5em">Sugar</a>
+</div>
+
+
+
+
+<link href="~/css/mainpage.css" rel="stylesheet" />
